# critical-file-mismatch-monitoring

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
example/: GoldeFile.json  file_1_ref.json  list.cfg  meta.json  setup.json
include/alarm_insert_client/: alarm_insert_client.c  alarm_insert_client.h
resources/: backup_alarm.json  gisc.cfg  gisdb.cfg
src/: CMakeLists.txt  alarm_insert_client.cpp  alarm_insert_client.h  config.cpp  flatten_json_diff.hpp  main.cpp  md5sum_diff.hpp  mis_mon.cpp  mis_mon.h  snmp_trap_client.hpp  version.h
src/core/: AppConfig.h  MonitorJob.h  Target.h  TargetState.h
src/infrastructure/: odbc_alarm_repository.cpp  odbc_alarm_repository.h  string_json_file_diff.hpp
src/old/: alarm_repository.h  checksum_monitor.cpp  checksum_monitor.h  config.cpp  config.h  config_repository.h  golden_parameter_monitor.cpp  golden_parameter_monitor.h  json_config_repository.cpp  json_config_repository.h  mis_mon.cpp  mis_mon.h  mismatch_status.cpp  mismatch_status.h  odbc_alarm_repository.cpp  odbc_alarm_repository.h  string_json_file_diff.hpp  utils.hpp
src/support/: utils.hpp
src/utils/: CommonUtil.hpp  FileUtil.h
test/support/: test_utils.cpp
